--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <body>
         <div>
             <h1>Looking good!</h1>
-            <p>Almost done I promise.</p>
+            <p><strong>Almost done I promise.</strong></p>
         </div>
-    </body>
-
-    
+    </body>   
 </html>
